--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h1 class="zaglav">ПРИВЕТСТВУЮ ВАС</h1>
     <h5 class="text_1"><em>СПАСИБО ЗА ТО, ЧТО ЗАГЛЯНУЛИ НА МОЙ САЙТ!</em></h5>
-    <img CLASS="imag_1" src="C:\Users\Admin\Pictures" alt="ТУТ ТИПА СИГМА КАК ИЗ МЕМА">
+    <img src="сигма.jpg" alt="ТУТ ТИПА СИГМА КАК ИЗ МЕМА">
 
 </div>
 
