--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stile.css">
-    <title>Stepan's website</title>
+    <title>Stepan's website.ru</title>
 </head>
 <body>
 
@@ -14,10 +14,11 @@
 
     <h1 class="zaglav">ПРИВЕТСТВУЮ ВАС</h1>
     <h5 class="text_1"><em>СПАСИБО ЗА ТО, ЧТО ЗАГЛЯНУЛИ НА МОЙ САЙТ!</em></h5>
-    <img src="сигма.jpg" alt="ТУТ ТИПА СИГМА КАК ИЗ МЕМА">
+    <img src="zayac.png" alt="ТУТ ТИПА СИГМА КАК ИЗ МЕМА">
 
 </div>
 
+    <a href="vtoroe.html">НАЖМИ, ЧТО БЫ ПОПАСТЬ НА ВТОРУЮ СТРАНИЦУ</a>
 
 </body>
 </html>
